--- a/lib/geo_web/components/layouts/app.html.heex
+++ b/lib/geo_web/components/layouts/app.html.heex
@@ -17,7 +17,7 @@
         <img
           src={~p"/images/github-mark.png"}
           alt="GitHub"
-          class="h-9 w-9"
+          class="h-5 w-5 dark:invert"
         />
       </a>
     </div>
